# model-service

./: API_USAGE.md  chat_service.db  main.py  pyproject.toml  test_api.py  test_db_connection.py  test_model_response.py  test_models.py  test_postgres.py  test_story.py  test_stream_response.py  test_websocket.py  view_history.py
model_service/: app.py
model_service/conf/: env.py  settings.py
model_service/db/: database.py  models.py
model_service/dto/: chat.py  user.py
model_service/middleware/: auth.py
model_service/models/chat/: chat.py
model_service/router/: chat.py  user.py
model_service/service/: chat_service.py  model_service.py  user_service.py
model_service/service/audio/: process_audio.py
